src/objects/Tax_Credit_Equity__c.object
<CustomObject>
    <description>LPAM</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equity_Type__c</fullName>
        <label>Equity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LIHTC 4%</fullName>
                </value>
                <value>
                    <fullName>LIHTC 9%</fullName>
                </value>
                <value>
                    <fullName>General Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Project__c</fullName>
        <label>Loan Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipName>Equity_Investments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tax Credit Equity</label>
    <nameField>
        <displayFormat>EquityInv-{00000}</displayFormat>
        <label>Equity Investment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Credit Equities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>